--- a/index.html
+++ b/index.html
@@ -20,12 +20,34 @@
         <div class = "maingroup">
             <div class="maintext">This website is awesome</div>
             <div class="subtext1">This website has some subtext that goes here under the main title. It's a smaller font 
-            and the color is lower contrast</div>
+            and the color is not lower contrast because I am lazy</div>
             <div class="signup">Sign up</div>
             <div class="space"></div>
         </div>
         <div class="placeholder">This is a placeholder for an image</div>
     </div>
-
+    <div class="random">Some random information</div>
+    <div class="boxcontainer">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    <div class="boxtextcontainer">
+        <div class="boxtext">this is some subtext under an illustration of an image</div>
+        <div class="boxtext">this is some subtext under an illustration of an image</div>
+        <div class="boxtext">this is some subtext under an illustration of an image</div>
+        <div class="boxtext">this is some subtext under an illustration of an image</div>
+    </div>
+    <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. 
+        Who knows? All I know is that it looks nice.</div>
+    <div class="friends">-Not Charlie, Andrew, or Jonathan</div>
+    <div class="bottom">
+        <div class="bottomcontainer">
+            <div class="calltoaction">Call to action! It's time</div>
+            <div class="sign">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <div class="button">Sign up</div>
+    </div>
 </body>
 </html>
